# lab03_Saketh_Paruchuri

./: README.md  pyproject.toml  train.py
app/: main.py
app/data/: target_classes.csv
